# movies_project

./: .gitignore  README.md  movies.csv  pyproject.toml
app/: routes.py
movies/models/: movie.py
movies/utils/: csv_load.py  movie_utils.py
scripts/: top_movies.py
tests/movies/: test_utils.py
